--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,16 @@
-body {
+/* body {
 
+} */
+
+html {
+    background: url(./components/Home/images/3.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
