--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,9 @@
-/* body {
-
-} */
+body {
+  margin:0;
+padding:0;
+outline:0;
+box-sizing:border-box;
+}
 
 html {
     background: url(./components/Home/images/3.jpg) no-repeat center center fixed; 
